# ride_stream

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AWS_CONSOLE_PREP.md  AWS_SETUP.md  DOCKER_SERVICES.md  INTERVIEW_PREP.md  METRICS.md  Makefile  README.md  SPECIFICATION.md  TASKS.md  TECHNICAL_PLAN.md  buildspec.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  coder.md  infra.md  reviewer.md  tester.md
.claude/hooks/: verify.sh
.claude/rules/: adapters.md  application.md  dbt.md  domain.md  infrastructure.md  testing.md  tooling.md
.github/workflows/: ci.yml
dashboard/data/: driver_metrics.json  metadata.json  passenger_metrics.json  pipeline_summary.json  raw_events.json  staged_rides.json
dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/models/gold/: _gold.yml  driver_metrics.sql  passenger_metrics.sql  rides_summary.sql
dbt/models/silver/: _silver.yml  stg_metrics.sql  stg_rides.sql
dbt/models/staging/: _sources.yml
dbt/tests/: generic_distance_consistency.sql  generic_fare_consistency.sql  generic_surge_bounds.sql  singular_no_duplicate_rides.sql
docker/: IMAGE_VERSIONS.md  docker-compose.yml
docker/airflow/: Dockerfile
docker/hive/: Dockerfile  hive-site.xml
infrastructure/airflow/dags/: ridestream_pipeline.py
infrastructure/cloudformation/: main.yaml  step_functions.asl.json
infrastructure/cloudformation/stacks/: catalog.yaml  codepipeline.yaml  compute.yaml  iam.yaml  monitoring.yaml  networking.yaml  orchestration.yaml  storage.yaml  streaming.yaml
infrastructure/minio/: create-buckets.sh
infrastructure/spark/: metrics_job.py
scripts/: run-pipeline.sh  run-simulator.sh  setup-pipeline.sh  setup.sh  smoke-test.sh  verify-images.sh  verify-local.sh  verify-versions.sh
src/ridestream/: config.py  main.py
src/ridestream/adapters/: cloud_provider_factory.py  errors.py  quality_gates.py
src/ridestream/adapters/aws/: athena_query_engine.py  glue_catalog.py  kinesis_firehose.py  msk_event_bus.py  s3_storage.py
src/ridestream/adapters/local/: hive_catalog.py  kafka_event_bus.py  minio_storage.py  mock_logger.py  trino_query_engine.py
src/ridestream/application/: generators.py  ride_simulator.py  spark_metrics.py
src/ridestream/domain/: entities.py  errors.py  repositories.py  services.py  value_objects.py
src/ridestream/entry_points/: cli.py
src/ridestream/ports/: cloud_provider.py  event_bus.py  logger.py  storage.py
tests/: conftest.py
tests/e2e/: conftest.py  test_aws_pipeline.py
tests/integration/: conftest.py  test_dbt_silver_to_gold.py  test_end_to_end.py  test_kafka_to_s3.py  test_s3_to_catalog.py  test_simulator_to_kafka.py  test_trino_query.py
tests/unit/adapters/: test_catalog.py  test_cloud_provider_factory.py  test_kafka_event_bus.py  test_quality_gates.py  test_query_engine.py  test_s3_storage.py
tests/unit/application/: test_cli.py  test_generators.py  test_ride_simulator.py  test_spark_metrics.py
tests/unit/domain/: test_entities.py  test_services.py  test_value_objects.py
